# cultura-bridge

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_APP  Dockerfile_NGINX  README.md  api.env  docker-compose.yaml  env_sample  nginx.conf.template  pyproject.toml
src/app/: app.py  asgi.py  main.py
src/app/api/routers/: test.py
src/app/core/: config.py
src/app/db/: engine.py  session.py
src/app/utils/: logging.py
